projects/los-business/dashboard/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard
  name: dashboard-svc
  namespace: los-business-dev
spec:
  ports:
    - port: 7010
      protocol: TCP
      targetPort: 7010
  selector:
    app: dashboard
